:lipstick: Fix weird whitespacing on cards

--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -263,6 +263,11 @@ ul.themeFilters>div>input {
     height: 12rem;
 }
 
+
+.wishcardInfo >div>h3{
+font-size: 1.25rem;
+}
+
 /* @supports (grid-template-rows: masonry){
     .filterBar:has(form:nth-of-type(2) .masonryBtn>input:checked)+.themeFilters+.grid>.wishcard{
         width: 100%;
